removed all rtl mixins

--- a/docs/_sass/examples/mixins.scss
+++ b/docs/_sass/examples/mixins.scss
@@ -99,27 +99,13 @@
   margin-right: -1px;
 
   &:first-child {
-    @include ltr {
-      border-bottom-left-radius: 0.5em;
-      border-top-left-radius: 0.5em;
-    }
-
-    @include rtl {
-      border-bottom-right-radius: 0.5em;
-      border-top-right-radius: 0.5em;
-    }
+    border-end-start-radius: 0.5em;
+    border-start-start-radius: 0.5em;
   }
 
   &:last-child {
-    @include ltr {
-      border-bottom-right-radius: 0.5em;
-      border-top-right-radius: 0.5em;
-    }
-
-    @include rtl {
-      border-bottom-left-radius: 0.5em;
-      border-top-left-radius: 0.5em;
-    }
+    border-end-end-radius: 0.5em;
+    border-start-end-radius: 0.5em;
   }
 }
 
@@ -136,8 +122,8 @@
 }
 
 .bulma-ltr-position-mixin {
-  @include ltr-position(1rem, false);
   border-radius: 0.25em;
+  inset-inline-start: 1rem;
   position: absolute;
   top: 1rem;
 }
@@ -157,8 +143,8 @@
 }
 
 .bulma-ltr-property-mixin {
-  @include ltr-property("margin", 1rem, false);
   border-radius: 0.25em;
+  margin-inline-start: 1rem;
 }
 
 .bulma-control-mixin {
