--- a/docs/documentation/components/dropdown.html
+++ b/docs/documentation/components/dropdown.html
@@ -177,6 +177,27 @@ meta:
 </div>
 {% endcapture %}
 
+{% capture dropdown_end_example %}
+<!-- Follows html direction property -->
+<div class="dropdown is-end is-active">
+  <div class="dropdown-trigger">
+    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu6">
+      <span>End aligned</span>
+      <span class="icon is-small">
+        <i class="fas fa-angle-down" aria-hidden="true"></i>
+      </span>
+    </button>
+  </div>
+  <div class="dropdown-menu" id="dropdown-menu6" role="menu">
+    <div class="dropdown-content">
+      <div class="dropdown-item">
+        <p>Add the <code>is-end</code> modifier for a <strong>dropdown that is aligned to the end</strong> of the container.</p>
+      </div>
+    </div>
+  </div>
+</div>
+{% endcapture %}
+
 {% capture dropdown_up_example %}
 <div class="dropdown is-up">
   <div class="dropdown-trigger">
@@ -288,5 +309,15 @@ meta:
 </div>
 
 {% include elements/snippet.html content=dropdown_up_example more=true %}
+
+{% include elements/anchor.html name="RTL" %}
+
+<div class="content">
+  <p>
+    You can add the <code>is-end</code> modifier for a <strong>dropdown that is aligned to the end</strong> of the container.
+  </p>
+</div>
+
+{% include elements/snippet.html content=dropdown_end_example more=true %}
 
 {% include components/variables.html type='component' %}
