--- a/docs/documentation/components/pagination.html
+++ b/docs/documentation/components/pagination.html
@@ -94,6 +94,23 @@ meta:
 </nav>
 {% endcapture %}
 
+{% capture pagination_end_example %}
+<!-- Follows html direction property -->
+<nav class="pagination is-end" role="navigation" aria-label="pagination">
+  <a class="pagination-previous">Previous</a>
+  <a class="pagination-next">Next page</a>
+  <ul class="pagination-list">
+    <li><a class="pagination-link" aria-label="Goto page 1">1</a></li>
+    <li><span class="pagination-ellipsis">&hellip;</span></li>
+    <li><a class="pagination-link" aria-label="Goto page 45">45</a></li>
+    <li><a class="pagination-link is-current" aria-label="Page 46" aria-current="page">46</a></li>
+    <li><a class="pagination-link" aria-label="Goto page 47">47</a></li>
+    <li><span class="pagination-ellipsis">&hellip;</span></li>
+    <li><a class="pagination-link" aria-label="Goto page 86">86</a></li>
+  </ul>
+</nav>
+{% endcapture %}
+
 {% capture pagination_rounded_example %}
 <nav class="pagination is-rounded" role="navigation" aria-label="pagination">
   <a class="pagination-previous">Previous</a>
@@ -202,6 +219,12 @@ meta:
 {% include elements/snippet.html content=pagination_centered_example horizontal=true more=true %}
 
 {% include elements/snippet.html content=pagination_right_example horizontal=true more=true %}
+
+<p class="content">
+  Add the <code>is-end</code> modifier to align the pagination buttons according to the container <code>direction</code> property.
+</p>
+
+{% include elements/snippet.html content=pagination_end_example horizontal=true more=true %}
 
 {% include elements/anchor.html name="Styles" %}
 
