--- a/docs/documentation/components/tabs.html
+++ b/docs/documentation/components/tabs.html
@@ -47,6 +47,18 @@ meta:
 </div>
 {% endcapture %}
 
+{% capture tabs_end_example %}
+<!-- Follows html direction property -->
+<div class="tabs is-end"> 
+  <ul>
+    <li class="is-active"><a>Pictures</a></li>
+    <li><a>Music</a></li>
+    <li><a>Videos</a></li>
+    <li><a>Documents</a></li>
+  </ul>
+</div>
+{% endcapture %}
+
 {% capture tabs_icons_example %}
 <div class="tabs is-centered">
   <ul>
@@ -389,6 +401,8 @@ meta:
 {% include elements/snippet.html content=tabs_centered_example horizontal=true more=true %}
 
 {% include elements/snippet.html content=tabs_right_example horizontal=true more=true %}
+
+{% include elements/snippet.html content=tabs_end_example horizontal=true more=true %}
 
 {% include elements/anchor.html name="Icons" %}
 
