--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -30,15 +30,11 @@ $card-media-margin: $block-spacing !default
 
 %card-item
   &:first-child
-    // Top Left
-    border-start-start-radius: $card-radius
-    // Top Right
     border-start-end-radius: $card-radius
+    border-start-start-radius: $card-radius
   &:last-child
-    // Bottom Left
-    border-end-start-radius: $card-radius
-    // Bottom Right
     border-end-end-radius: $card-radius
+    border-end-start-radius: $card-radius
 
 .card-header
   @extend %card-item
@@ -70,16 +66,12 @@ $card-media-margin: $block-spacing !default
   position: relative
   &:first-child
     img
-      // Top Left
-      border-start-start-radius: $card-radius
-      // Top Right
       border-start-end-radius: $card-radius
+      border-start-start-radius: $card-radius
   &:last-child
     img
-      // Bottom Left
-      border-end-start-radius: $card-radius
-      // Bottom Right
       border-end-end-radius: $card-radius
+      border-end-start-radius: $card-radius
 
 .card-content
   @extend %card-item
@@ -102,7 +94,7 @@ $card-media-margin: $block-spacing !default
   justify-content: center
   padding: $card-footer-padding
   &:not(:last-child)
-    +ltr-property("border", $card-footer-border-top)
+    border-inline-end: $card-footer-border-top
 
 // Combinations
 
