--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -31,7 +31,7 @@ $dropdown-divider-background-color: $border-light !default
     .dropdown-menu
       left: auto
       right: 0
-  &.is-block-end
+  &.is-end
     .dropdown-menu
       inset-inline-start: auto
       inset-inline-end: 0
@@ -44,7 +44,7 @@ $dropdown-divider-background-color: $border-light !default
 
 .dropdown-menu
   display: none
-  +ltr-position(0, false)
+  inset-inline-start: 0
   min-width: $dropdown-menu-min-width
   padding-top: $dropdown-content-offset
   position: absolute
@@ -68,7 +68,7 @@ $dropdown-divider-background-color: $border-light !default
 
 a.dropdown-item,
 button.dropdown-item
-  +ltr-property("padding", 3rem)
+  padding-inline-end: 3rem
   text-align: inherit
   white-space: nowrap
   width: 100%
