--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -25,7 +25,7 @@ $level-item-spacing: ($block-spacing * 0.5) !default
     .level-item
       &:not(:last-child)
         margin-bottom: 0
-        +ltr-property("margin", $level-item-spacing)
+        margin-inline-end: $level-item-spacing
       &:not(.is-narrow)
         flex-grow: 1
   // Responsiveness
@@ -62,7 +62,7 @@ $level-item-spacing: ($block-spacing * 0.5) !default
     // Responsiveness
     +tablet
       &:not(:last-child)
-        +ltr-property("margin", $level-item-spacing)
+        margin-inline-end: $level-item-spacing
 
 .level-left
   justify-content: left
