--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -49,10 +49,10 @@ $media-level-2-spacing: 0.5rem !default
   margin-left: $media-spacing
 
 .media-start
-  +ltr-property("margin", $media-spacing)
+  margin-inline-end: $media-spacing
 
 .media-end 
-  +ltr-property("margin", $media-spacing, false)
+  margin-inline-start: $media-spacing
 
 .media-content
   flex-basis: auto
