--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -44,9 +44,9 @@ $menu-label-spacing: 1em !default
       color: $menu-item-active-color
   li
     ul
-      +ltr-property("border", $menu-list-border-left, false)
+      border-inline-start: $menu-list-border-left
       margin: $menu-nested-list-margin
-      +ltr-property("padding", $menu-nested-list-padding-left, false)
+      padding-inline-start: $menu-nested-list-padding-left
 
 .menu-label
   color: $menu-label-color
