--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -70,10 +70,8 @@ $message-colors: $colors !default
 .message-header
   align-items: center
   background-color: $message-header-background-color
-  // Top Left
-  border-start-start-radius: $message-header-radius
-  // Top Right
   border-start-end-radius: $message-header-radius
+  border-start-start-radius: $message-header-radius
   color: $message-header-color
   display: flex
   font-weight: $message-header-weight
@@ -84,13 +82,11 @@ $message-colors: $colors !default
   .delete
     flex-grow: 0
     flex-shrink: 0
-    +ltr-property("margin", 0.75em, false)
+    margin-inline-start: 0.75em
   & + .message-body
     border-width: $message-header-body-border-width
-    // Top Left
-    border-start-start-radius: 0
-    // Top Right
     border-start-end-radius: 0
+    border-start-start-radius: 0
 
 .message-body
   border-color: $message-body-border-color
