--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -8,11 +8,11 @@ $pagination-min-width: $control-height !default
 
 $pagination-item-font-size: 1em !default
 $pagination-item-margin: 0.25rem !default
-$pagination-item-padding-start: 0.5em !default
-$pagination-item-padding-end: 0.5em !default
+$pagination-item-padding-left: 0.5em !default
+$pagination-item-padding-right: 0.5em !default
 
-$pagination-nav-padding-start: 0.75em !default
-$pagination-nav-padding-end: 0.75em !default
+$pagination-nav-padding-left: 0.75em !default
+$pagination-nav-padding-right: 0.75em !default
 
 $pagination-hover-color: $link-hover !default
 $pagination-hover-border-color: $link-hover-border !default
@@ -70,8 +70,8 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2) !default
   font-size: $pagination-item-font-size
   justify-content: center
   margin: $pagination-item-margin
-  padding-inline-start: $pagination-item-padding-start
-  padding-inline-end: $pagination-item-padding-end
+  padding-inline-end: $pagination-item-padding-right
+  padding-inline-start: $pagination-item-padding-left
   text-align: center
 
 .pagination-previous,
@@ -97,8 +97,8 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2) !default
 
 .pagination-previous,
 .pagination-next
-  padding-inline-start: $pagination-nav-padding-start
-  padding-inline-end: $pagination-nav-padding-end
+  padding-inline-end: $pagination-nav-padding-right
+  padding-inline-start: $pagination-nav-padding-left
   white-space: nowrap
 
 .pagination-link
@@ -164,7 +164,7 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2) !default
       .pagination-list
         justify-content: right
         order: 3
-    &.is-block-end
+    &.is-end
       .pagination-previous
         order: 1
       .pagination-next
