--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -90,7 +90,7 @@ $panel-colors: $colors !default
   justify-content: flex-start
   padding: 0.5em 0.75em
   input[type="checkbox"]
-    +ltr-property("margin", 0.75em)
+    margin-inline-end: 0.75em
   & > .control
     flex-grow: 1
     flex-shrink: 1
@@ -98,18 +98,14 @@ $panel-colors: $colors !default
   &.is-wrapped
     flex-wrap: wrap
   &.is-active
-    // Top Left
-    border-start-start-color: $panel-block-active-border-left-color
-    // Bottom Left
     border-end-start-color: $panel-block-active-border-left-color
+    border-start-start-color: $panel-block-active-border-left-color
     color: $panel-block-active-color
     .panel-icon
       color: $panel-block-active-icon-color
   &:last-child
-    // Bottom Left
-    border-end-start-radius: $panel-radius
-    // Bottom Right
     border-end-end-radius: $panel-radius
+    border-end-start-radius: $panel-radius
 
 a.panel-block,
 label.panel-block
@@ -120,7 +116,7 @@ label.panel-block
 .panel-icon
   +fa(14px, 1em)
   color: $panel-icon-color
-  +ltr-property("margin", 0.75em)
+  margin-inline-end: 0.75em
   .fa
     font-size: inherit
     line-height: inherit
