--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -70,23 +70,23 @@ $tabs-toggle-link-active-color: $link-invert !default
     justify-content: flex-start
     &.is-left
       padding-right: 0.75em
-    &.is-block-start
+    &.is-start
       padding-inline-end: 0.75em
     &.is-center
       flex: none
       justify-content: center
       padding-inline: 0.75em
     &.is-right
-      padding-left: 0.75em
       justify-content: right
-    &.is-block-end
+      padding-left: 0.75em
+    &.is-end
       justify-content: flex-end
       padding-inline-start: 0.75em
   .icon
     &:first-child
-      +ltr-property("margin", 0.5em)
+      margin-inline-end: 0.5em
     &:last-child
-      +ltr-property("margin", 0.5em, false)
+      margin-inline-start: 0.5em
   // Alignment
   &.is-centered
     ul
@@ -94,7 +94,7 @@ $tabs-toggle-link-active-color: $link-invert !default
   &.is-right
     ul
       justify-content: right
-  &.is-block-end
+  &.is-end
     ul
       justify-content: flex-end
 
@@ -129,17 +129,13 @@ $tabs-toggle-link-active-color: $link-invert !default
         z-index: 2
     li
       & + li
-        +ltr-property("margin", -#{$tabs-toggle-link-border-width}, false)
+        margin-inline-start: -#{$tabs-toggle-link-border-width}
       &:first-child a
-        // Top Left
-        border-start-start-radius: $tabs-toggle-link-radius
-        // Bottom Left
         border-end-start-radius: $tabs-toggle-link-radius
+        border-start-start-radius: $tabs-toggle-link-radius
       &:last-child a
-        // Top Right
-        border-start-end-radius: $tabs-toggle-link-radius
-        // Bottom Right
         border-end-end-radius: $tabs-toggle-link-radius
+        border-start-end-radius: $tabs-toggle-link-radius
       &.is-active
         a
           background-color: $tabs-toggle-link-active-background-color
@@ -151,17 +147,13 @@ $tabs-toggle-link-active-color: $link-invert !default
     &.is-toggle-rounded
       li
         &:first-child a
-          +ltr-property("padding", 1.25em, false)
-          // Top Left
-          border-start-start-radius: $radius-rounded
-          // Bottom Left
+          padding-inline-start: 1.25em
           border-end-start-radius: $radius-rounded
+          border-start-start-radius: $radius-rounded
         &:last-child a
-          +ltr-property("padding", 1.25em)
-          // Top Right
-          border-start-end-radius: $radius-rounded
-          // Bottom Right
+          padding-inline-end: 1.25em
           border-end-end-radius: $radius-rounded
+          border-start-end-radius: $radius-rounded
   // Sizes
   &.is-small
     font-size: $size-small
