--- a/sass/form/file.sass
+++ b/sass/form/file.sass
@@ -64,15 +64,11 @@ $file-colors: $form-colors !default
   // Modifiers
   &.has-name
     .file-cta
-      // Top Right
-      border-start-end-radius: 0
-      // Bottom Right
       border-end-end-radius: 0
+      border-start-end-radius: 0
     .file-name
-      // Top Left
-      border-start-start-radius: 0
-      // Bottom Left
       border-end-start-radius: 0
+      border-start-start-radius: 0
     &.is-empty
       .file-cta
         border-radius: $file-radius
@@ -103,23 +99,15 @@ $file-colors: $form-colors !default
         font-size: 35px
     &.has-name
       .file-cta
-        // Top Left
-        border-start-start-radius: $file-radius
-        // Top Right
-        border-start-end-radius: $file-radius
-        // Bottom Left
-        border-end-start-radius: 0
-        // Bottom Right
         border-end-end-radius: 0
+        border-end-start-radius: 0
+        border-start-end-radius: $file-radius
+        border-start-start-radius: $file-radius
       .file-name
-        // Top Left
-        border-start-start-radius: 0
-        // Top Right
-        border-start-end-radius: 0
-        // Bottom Left
-        border-end-start-radius: $file-radius
-        // Bottom Right
         border-end-end-radius: $file-radius
+        border-end-start-radius: $file-radius
+        border-start-end-radius: 0
+        border-start-start-radius: 0
         border-width: 0 1px 1px
   &.is-centered
     justify-content: center
@@ -132,26 +120,25 @@ $file-colors: $form-colors !default
   &.is-right
     justify-content: right
     .file-cta
-      border-top-right-radius: $file-radius
-      border-bottom-right-radius: $file-radius
+      border-radius: 0 $file-radius $file-radius 0
     .file-name
-      border-top-left-radius: $file-radius
-      border-bottom-left-radius: $file-radius
+      border-radius: $file-radius 0 0 $file-radius
       border-width: 1px 0 1px 1px
       order: -1
-  &.is-block-end
+  &.is-end
     justify-content: flex-end
     .file-cta
-      // Top Right
-      border-start-end-radius: $file-radius
-      // Bottom Right
       border-end-end-radius: $file-radius
+      border-end-start-radius: 0
+      border-start-end-radius: $file-radius
+      border-start-start-radius: 0
     .file-name
-      // Top Left
-      border-start-start-radius: $file-radius
-      // Bottom Left
+      border-end-end-radius: 0
       border-end-start-radius: $file-radius
-      border-width: 1px 0 1px 1px
+      border-start-end-radius: 0
+      border-start-start-radius: $file-radius
+      border-width: 1px
+      border-inline-end-width: 0 
       order: -1
 
 .file-label
@@ -211,7 +198,7 @@ $file-colors: $form-colors !default
   display: flex
   height: 1em
   justify-content: center
-  +ltr-property("margin", 0.5em)
+  margin-inline-end: 0.5em
   width: 1em
   .fa
     font-size: 14px
