--- a/sass/helpers/spacing.sass
+++ b/sass/helpers/spacing.sass
@@ -5,7 +5,7 @@
   padding: 0 !important
 
 $spacing-shortcuts: ("margin": "m", "padding": "p") !default
-$spacing-directions: ("top": "t", "right": "r", "bottom": "b", "left": "l", "inline-start": "start", "inline-end": "end") !default
+$spacing-directions: ("top": "t", "right": "r", "bottom": "b", "left": "l", "inline-start": "s", "inline-end": "e") !default
 $spacing-horizontal: "x" !default
 $spacing-vertical: "y" !default
 $spacing-values: ("0": 0, "1": 0.25rem, "2": 0.5rem, "3": 0.75rem, "4": 1rem, "5": 1.5rem, "6": 3rem, "auto": auto) !default
