--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -136,7 +136,7 @@ $hero-colors: $colors !default
     display: flex
     justify-content: center
     .button:not(:last-child)
-      +ltr-property("margin", 1.5rem)
+      margin-inline-end: 1.5rem
 
 // Containers
 
