--- a/docs/documentation/layout/level.html
+++ b/docs/documentation/layout/level.html
@@ -13,8 +13,8 @@ breadcrumb:
 {% capture nav_example %}
 <!-- Main container -->
 <nav class="level">
-  <!-- Left side -->
-  <div class="level-left">
+  <!-- Start side -->
+  <div class="level-start">
     <div class="level-item">
       <p class="subtitle is-5">
         <strong>123</strong> posts
@@ -34,8 +34,8 @@ breadcrumb:
     </div>
   </div>
 
-  <!-- Right side -->
-  <div class="level-right">
+  <!-- End side -->
+  <div class="level-end">
     <p class="level-item"><strong>All</strong></p>
     <p class="level-item"><a>Published</a></p>
     <p class="level-item"><a>Drafts</a></p>
@@ -129,9 +129,11 @@ breadcrumb:
     <li>
       <code>level</code>: main container
       <ul>
-        <li><code>level-left</code> for the left side
+        <li><code>level-left</code> for the left side</li>
+        <li><code>level-right</code> for the right side</li>
+        <li><code>level-start</code> for the start side, <strong>directional</strong></li>
         <li>
-          <code>level-right</code> for the right side
+          <code>level-end</code> for the end side, <strong>directional</strong>
           <ul>
             <li><code>level-item</code> for each individual element</li>
           </ul>
