--- a/docs/documentation/layout/media-object.html
+++ b/docs/documentation/layout/media-object.html
@@ -12,7 +12,7 @@ breadcrumb:
 
 {% capture media_example %}
 <article class="media">
-  <figure class="media-left">
+  <figure class="media-start">
     <p class="image is-64x64">
       <img src="{{site.url}}/images/placeholders/128x128.png">
     </p>
@@ -26,7 +26,7 @@ breadcrumb:
       </p>
     </div>
     <nav class="level is-mobile">
-      <div class="level-left">
+      <div class="level-start">
         <a class="level-item">
           <span class="icon is-small"><i class="fas fa-reply"></i></span>
         </a>
@@ -39,7 +39,7 @@ breadcrumb:
       </div>
     </nav>
   </div>
-  <div class="media-right">
+  <div class="media-end">
     <button class="delete"></button>
   </div>
 </article>
@@ -47,7 +47,7 @@ breadcrumb:
 
 {% capture media_bis_example %}
 <article class="media">
-  <figure class="media-left">
+  <figure class="media-start">
     <p class="image is-64x64">
       <img src="{{site.url}}/images/placeholders/128x128.png">
     </p>
@@ -59,12 +59,12 @@ breadcrumb:
       </p>
     </div>
     <nav class="level">
-      <div class="level-left">
+      <div class="level-start">
         <div class="level-item">
           <a class="button is-info">Submit</a>
         </div>
       </div>
-      <div class="level-right">
+      <div class="level-end">
         <div class="level-item">
           <label class="checkbox">
             <input type="checkbox"> Press enter to submit
@@ -78,7 +78,7 @@ breadcrumb:
 
 {% capture media_nested_example %}
 <article class="media">
-  <figure class="media-left">
+  <figure class="media-start">
     <p class="image is-64x64">
       <img src="{{site.url}}/images/placeholders/128x128.png">
     </p>
@@ -95,7 +95,7 @@ breadcrumb:
     </div>
 
     <article class="media">
-      <figure class="media-left">
+      <figure class="media-start">
         <p class="image is-48x48">
           <img src="{{site.url}}/images/placeholders/96x96.png">
         </p>
@@ -122,7 +122,7 @@ breadcrumb:
     </article>
 
     <article class="media">
-      <figure class="media-left">
+      <figure class="media-start">
         <p class="image is-48x48">
           <img src="{{site.url}}/images/placeholders/96x96.png">
         </p>
@@ -143,7 +143,7 @@ breadcrumb:
 </article>
 
 <article class="media">
-  <figure class="media-left">
+  <figure class="media-start">
     <p class="image is-64x64">
       <img src="{{site.url}}/images/placeholders/128x128.png">
     </p>
