--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -156,7 +156,7 @@ body
   @extend %reset
   color: $navbar-burger-color
   +hamburger($navbar-height)
-  +ltr-property("margin", auto, false)
+  margin-inline-start: auto
 
 .navbar-menu
   display: none
@@ -213,12 +213,12 @@ a.navbar-item,
   flex-shrink: 1
 
 .navbar-link:not(.is-arrowless)
-  +ltr-property("padding", 2.5em)
+  padding-inline-end: 2.5em
   &::after
     @extend %arrow
     border-color: $navbar-dropdown-arrow
+    inset-inline-end: 1.125em
     margin-top: -0.375em
-    +ltr-position(1.125em)
 
 .navbar-dropdown
   font-size: 0.875rem
@@ -350,21 +350,19 @@ a.navbar-item,
     flex-shrink: 0
   .navbar-start
     justify-content: flex-start
-    +ltr-property("margin", auto)
+    margin-inline-end: auto
   .navbar-end
     justify-content: flex-end
-    +ltr-property("margin", auto, false)
+    margin-inline-start: auto
   .navbar-dropdown
     background-color: $navbar-dropdown-background-color
-    // Bottom Left
-    border-end-start-radius: $navbar-dropdown-radius
-    // Bottom right
     border-end-end-radius: $navbar-dropdown-radius
+    border-end-start-radius: $navbar-dropdown-radius
     border-top: $navbar-dropdown-border-top
     box-shadow: 0 8px 8px bulmaRgba($scheme-invert, 0.1)
     display: none
     font-size: 0.875rem
-    +ltr-position(0, false)
+    inset-inline-start: 0
     min-width: 100%
     position: absolute
     top: 100%
@@ -373,7 +371,7 @@ a.navbar-item,
       padding: 0.375rem 1rem
       white-space: nowrap
     a.navbar-item
-      +ltr-property("padding", 3rem)
+      padding-inline-end: 3rem
       &:focus,
       &:hover
         background-color: $navbar-dropdown-item-hover-background-color
@@ -396,7 +394,7 @@ a.navbar-item,
     &.is-right
       left: auto
       right: 0
-    &.is-block-end
+    &.is-end
       inset-inline-start: auto
       inset-inline-end: 0
   .navbar-divider
@@ -404,9 +402,9 @@ a.navbar-item,
   .navbar > .container,
   .container > .navbar
     .navbar-brand
-      +ltr-property("margin", -.75rem, false)
+      margin-inline-start: -.75rem
     .navbar-menu
-      +ltr-property("margin", -.75rem)
+      margin-inline-end: -.75rem
   // Fixed navbar
   .navbar
     &.is-fixed-bottom-desktop,
