--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -32,9 +32,9 @@ $icon-text-spacing: 0.25em !default
     flex-grow: 0
     flex-shrink: 0
     &:not(:last-child)
-      +ltr-property("margin", $icon-text-spacing)
+      margin-inline-end: $icon-text-spacing
     &:not(:first-child)
-      +ltr-property("margin", $icon-text-spacing, false)
+      margin-inline-start: $icon-text-spacing
 
 div.icon-text
   display: flex
