--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -3,8 +3,8 @@
 $notification-background-color: $background !default
 $notification-code-background-color: $scheme-main !default
 $notification-radius: $radius !default
-$notification-padding-vertical: 1.25rem !default
 $notification-padding-horizontal: 1.5rem 2.5rem !default
+$notification-padding-vertical: 1.25rem !default
 
 $notification-colors: $colors !default
 
@@ -26,7 +26,7 @@ $notification-colors: $colors !default
   pre code
     background: transparent
   & > .delete
-    +ltr-position(0.5rem)
+    inset-inline-end: 0.5rem
     position: absolute
     top: 0.5rem
   .title,
