--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -40,7 +40,7 @@ $label-colors: $form-colors !default
     justify-content: flex-start
     .control
       &:not(:last-child)
-        +ltr-property("margin", -1px)
+        margin-inline-end: -1px
       &:not(:first-child):not(:last-child)
         .button,
         .input,
@@ -50,18 +50,14 @@ $label-colors: $form-colors !default
         .button,
         .input,
         .select select
-          // Top Right
-          border-start-end-radius: 0
-          // Bottom Right
           border-end-end-radius: 0
+          border-start-end-radius: 0
       &:last-child:not(:only-child)
         .button,
         .input,
         .select select
-          // Top Left
-          border-start-start-radius: 0
-          // Bottom Left
           border-end-start-radius: 0
+          border-start-start-radius: 0
       .button,
       .input,
       .select select
@@ -94,7 +90,7 @@ $label-colors: $form-colors !default
       flex-shrink: 0
       &:not(:last-child)
         margin-bottom: 0
-        +ltr-property("margin", 0.75rem)
+        margin-inline-end: 0.75rem
       &.is-expanded
         flex-grow: 1
         flex-shrink: 1
@@ -125,7 +121,7 @@ $label-colors: $form-colors !default
     flex-basis: 0
     flex-grow: 1
     flex-shrink: 0
-    +ltr-property("margin", 1.5rem)
+    margin-inline-end: 1.5rem
     text-align: right
     &.is-small
       font-size: $size-small
@@ -154,7 +150,7 @@ $label-colors: $form-colors !default
       &:not(.is-narrow)
         flex-grow: 1
       &:not(:last-child)
-        +ltr-property("margin", 0.75rem)
+        margin-inline-end: 0.75rem
 
 .control
   box-sizing: border-box
@@ -214,7 +210,7 @@ $label-colors: $form-colors !default
     &::after
       @extend %loader
       position: absolute !important
-      +ltr-position(0.625em)
+      inset-inline-end: 0.625em
       top: 0.625em
       z-index: 4
     &.is-small:after
