revision and updated docs

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4866,7 +4866,7 @@ div.icon-text {
 }
 
 .tags.is-centered .tag {
-  margin-inline: 0.25em;
+  margin-inline: 0.25rem;
 }
 
 .tags.is-right {
@@ -7290,7 +7290,7 @@ fieldset[disabled] .select select:hover {
 .control.is-loading::after {
   position: absolute !important;
   inset-inline-end: 0.625em;
-  top: 0.625em;
+  top: 0.75em;
   z-index: 4;
 }
 
