--- a/docs/documentation/components/breadcrumb.html
+++ b/docs/documentation/components/breadcrumb.html
@@ -36,6 +36,18 @@ meta:
 </nav>
 {% endcapture %}
 
+{% capture breadcrumb_end_example %}
+<!-- Follows html direction property -->
+<nav class="breadcrumb is-end" aria-label="breadcrumbs">
+  <ul>
+    <li><a href="#">Bulma</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Components</a></li>
+    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
+  </ul>
+</nav>
+{% endcapture %}
+
 {% capture breadcrumb_right_example %}
 <nav class="breadcrumb is-right" aria-label="breadcrumbs">
   <ul>
@@ -180,6 +192,8 @@ meta:
 </div>
 
 {% include elements/snippet.html content=breadcrumb_centered_example horizontal=true clipped=true %}
+
+{% include elements/snippet.html content=breadcrumb_end_example horizontal=true clipped=true %}
 
 {% include elements/snippet.html content=breadcrumb_right_example horizontal=true clipped=true %}
 
