--- a/docs/documentation/components/dropdown.html
+++ b/docs/documentation/components/dropdown.html
@@ -157,26 +157,6 @@ meta:
 </div>
 {% endcapture %}
 
-{% capture dropdown_right_example %}
-<div class="dropdown is-right is-active">
-  <div class="dropdown-trigger">
-    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu6">
-      <span>Right aligned</span>
-      <span class="icon is-small">
-        <i class="fas fa-angle-down" aria-hidden="true"></i>
-      </span>
-    </button>
-  </div>
-  <div class="dropdown-menu" id="dropdown-menu6" role="menu">
-    <div class="dropdown-content">
-      <div class="dropdown-item">
-        <p>Add the <code>is-right</code> modifier for a <strong>right-aligned</strong> dropdown.</p>
-      </div>
-    </div>
-  </div>
-</div>
-{% endcapture %}
-
 {% capture dropdown_end_example %}
 <!-- Follows html direction property -->
 <div class="dropdown is-end is-active">
@@ -288,17 +268,18 @@ meta:
 
 {% include elements/snippet.html content=dropdown_info_example more=true %}
 
-{% include elements/anchor.html name="Right aligned" %}
+{% include elements/anchor.html name="End aligned" %}
 
 <div class="content">
   <p>
-    You can add the <code>is-right</code> modifier to have a <strong>right-aligned</strong> dropdown.
+    You can add the <code>is-end</code> modifier to have a dropdown that is <strong>end-aligned</strong>.
   </p>
 </div>
 
 {% include elements/snippet.html content=dropdown_left_example more=true %}
 
-{% include elements/snippet.html content=dropdown_right_example more=true %}
+{% include elements/snippet.html content=dropdown_end_example more=true %}
+
 
 {% include elements/anchor.html name="Dropup" %}
 
@@ -309,15 +290,5 @@ meta:
 </div>
 
 {% include elements/snippet.html content=dropdown_up_example more=true %}
-
-{% include elements/anchor.html name="RTL" %}
-
-<div class="content">
-  <p>
-    You can add the <code>is-end</code> modifier for a <strong>dropdown that is aligned to the end</strong> of the container.
-  </p>
-</div>
-
-{% include elements/snippet.html content=dropdown_end_example more=true %}
 
 {% include components/variables.html type='component' %}
