--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -30,7 +30,7 @@ $tag-colors: $colors !default
   &.is-centered
     justify-content: center
     .tag
-      margin-inline: 0.25em
+      margin-inline: 0.25rem
   &.is-right
     justify-content: right
     .tag
