--- a/css/bulma.css
+++ b/css/bulma.css
@@ -2991,7 +2991,7 @@ div.icon-text {
 }
 
 .tags.is-centered .tag {
-  margin-inline: 0.25em;
+  margin-inline: 0.25rem;
 }
 
 .tags.is-right {
@@ -4671,7 +4671,7 @@ fieldset[disabled] .select select:hover {
 .control.is-loading::after {
   position: absolute !important;
   inset-inline-end: 0.625em;
-  top: 0.625em;
+  top: 0.75em;
   z-index: 4;
 }
 
