fix message border on RTL

--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -10,7 +10,7 @@ $message-header-padding: 0.75em 1em !default
 $message-header-radius: $radius !default
 
 $message-body-border-color: $border !default
-$message-body-border-width: 0 0 0 4px !default
+$message-body-border-width: 4px !default
 $message-body-color: $text !default
 $message-body-padding: 1.25em 1.5em !default
 $message-body-radius: $radius !default
@@ -92,7 +92,8 @@ $message-colors: $colors !default
   border-color: $message-body-border-color
   border-radius: $message-body-radius
   border-style: solid
-  border-width: $message-body-border-width
+  border-width: $message-header-body-border-width
+  border-inline-start-width: $message-body-border-width
   color: $message-body-color
   padding: $message-body-padding
   code,
