Enable custom names for 'Variables' sections

--- a/docs/_includes/components/variables.html
+++ b/docs/_includes/components/variables.html
@@ -15,7 +15,7 @@
 
 {% if variables_size != '0' or variables_keys_size != '0' %}
   <div class="bd-vars">
-    {% include elements/anchor.html name="Variables" %}
+    {% include elements/anchor.html name=anchor_name %}
 
     <div class="bd-var bd-is-head">
       <div class="bd-var-name">
