fix: update .scss file

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -19146,6 +19146,10 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   color: white;
 }
 
+.bd-vars + .bd-vars {
+  margin-top: var(--docs-inner);
+}
+
 .bd-var {
   display: flex;
   flex-wrap: wrap;
