Add select specs

--- a/docs/css/bulma.css
+++ b/docs/css/bulma.css
@@ -3728,7 +3728,7 @@ fieldset[disabled] .select select:hover {
 }
 
 .select.is-disabled::after {
-  border-color: #7a7a7a;
+  border-color: #7a7a7a !important;
 }
 
 .select.is-fullwidth {
@@ -11787,32 +11787,4 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .footer {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem;
-}
-
-.yolo {
-  content: "default";
-}
-
-@media screen and (min-width: 769px), print {
-  .yolo {
-    content: "tablet";
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .yolo {
-    content: "desktop";
-  }
-}
-
-@media screen and (min-width: 1216px) {
-  .yolo {
-    content: "widescreen";
-  }
-}
-
-@media screen and (min-width: 1408px) {
-  .yolo {
-    content: "fullhd";
-  }
 }
