fix: remove unnecessary specific from sass file

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -7192,7 +7192,7 @@ fieldset[disabled] .select select:hover {
   right: 0;
 }
 
-.control.is-loading.has-icons-right > .icon.is-right > i {
+.control.is-loading.has-icons-right > .icon.is-right {
   visibility: hidden;
 }
 
