--- a/docs/_includes/global/navbar-start.html
+++ b/docs/_includes/global/navbar-start.html
@@ -8,10 +8,7 @@
     <span class="icon has-text-primary">
       <i class="fas fa-book"></i>
     </span>
-    <span class="is-hidden-tablet-only is-hidden-desktop-only">
-      Documentation
-    </span>
-    <span class="is-hidden-mobile is-hidden-widescreen">
+    <span>
       Docs
     </span>
   </a>
