--- a/docs/_sass/components/navbar.scss
+++ b/docs/_sass/components/navbar.scss
@@ -360,6 +360,7 @@
   .bd-search {
     align-items: center;
     display: flex;
+    flex-shrink: 0;
     // margin-left: 0.5rem;
     width: 16rem;
   }
@@ -368,7 +369,7 @@
 @include widescreen() {
   .bd-navbar {
     font-size: 1.125rem;
-    padding: 2rem 4rem;
+    // padding: 2rem 4rem;
 
     .navbar-brand img {
       height: 36px;
