--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -18776,6 +18776,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   .bd-search {
     align-items: center;
     display: flex;
+    flex-shrink: 0;
     width: 16rem;
   }
 }
@@ -18783,7 +18784,6 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 @media screen and (min-width: 1216px) {
   .bd-navbar {
     font-size: 1.125rem;
-    padding: 2rem 4rem;
   }
   .bd-navbar .navbar-brand img {
     height: 36px;
