Fix docs navbar, Fix z-indices

--- a/docs/_includes/components/categories.html
+++ b/docs/_includes/components/categories.html
@@ -1,6 +1,6 @@
 <nav id="categories" class="bd-categories">
   <div class="bd-categories-filter">
-    <input id="categoriesFilter" class="input is-small" type="text" name="" placeholder="Filter links">
+    <input id="categoriesFilter" class="input is-small" type="text" name="" placeholder="Filter links" style="border-radius: 0.5em;">
     <span class="bd-key">f</span>
   </div>
 
@@ -10,11 +10,11 @@
 
     {% if category_id == 'overview' %}
       <p class="bd-category-group">
-        Concepts
+        Guides
       </p>
     {% elsif category_id == 'columns' %}
       <p class="bd-category-group">
-        Library
+        CSS Library
       </p>
     {% endif %}
 
