--- a/docs/_sass/components/navbar.scss
+++ b/docs/_sass/components/navbar.scss
@@ -1,4 +1,6 @@
 .bd-navbar {
+  z-index: 50;
+
   .navbar-brand img {
     height: 28px;
     max-height: 2em;
@@ -334,6 +336,10 @@
       }
     }
   }
+
+  .bd-navbar-search-desktop-icon {
+    display: none;
+  }
 }
 
 @include desktop() {
@@ -353,16 +359,16 @@
     }
   }
 
-  .bd-navbar-search-icon {
-    display: none;
-  }
-
   .bd-search {
     align-items: center;
     display: flex;
     flex-shrink: 0;
     // margin-left: 0.5rem;
-    width: 16rem;
+    width: 12rem;
+  }
+
+  .bd-navbar-search-mobile-icon {
+    display: none;
   }
 }
 
@@ -380,6 +386,10 @@
   .bd-navbar-dropdown {
     left: 0;
     right: auto;
+  }
+
+  .bd-search {
+    width: 16rem;
   }
 }
 
