--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -25,7 +25,7 @@
       </a>
     </div>
 
-    <button id="searchIcon" class="navbar-item bd-navbar-search-icon bd-navbar-mobile-icon">
+    <button id="searchIcon" class="navbar-item bd-navbar-search-icon bd-navbar-search-mobile-icon">
       <span class="icon">
         <i class="fas fa-lg fa-search"></i>
       </span>
@@ -64,14 +64,14 @@
 
       <div class="navbar-item bd-navbar-download-button is-hidden-touch">
         <a class="button is-primary mr-3" href="{{ site.data.meta.download }}">
-          <span class="icon">
+          <span class="icon is-hidden-touch is-hidden-desktop-only">
             <i class="fas fa-download"></i>
           </span>
           <span>Download</span>
         </a>
 
         <a href="{{ site.url }}{{ site.data.links.by_id.become-sponsor.path }}" class="button is-sponsor is-light">
-          <span class="icon is-small">
+          <span class="icon is-small is-hidden-touch is-hidden-desktop-only">
             <i class="fas fa-thumbs-up"></i>
           </span>
           <span>
@@ -79,12 +79,6 @@
           </span>
         </a>
       </div>
-
-      <button class="navbar-item bd-navbar-search-icon">
-        <span class="icon">
-          <i class="fas fa-lg fa-search"></i>
-        </span>
-      </button>
     </div>
   </div>
 
